Name:           hschain-PoW
Version:        0.1
Synopsis:       Haskell implementation of PoW consensus
Description:
  Framework for working with PoW consensus protocol


Cabal-Version:  >= 1.10
License:        MIT
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       https://github.com/hexresearch/thundermint
Category:       Data
Build-Type:     Simple


Library
  Ghc-options:         -Wall
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , hschain-crypto
                     , hschain-control
                     , hschain-mempool
                     , hschain-logger
                     , hschain-net
                     , hschain-merkle
                     , hschain-db
                       --
                     , aeson
                     , bytestring        >=0.10
                     , containers        >=0.5.9
                     , deepseq           >=1.4
                     , generic-lens      >=0.2
                     , exceptions        >=0.8.3
                     , katip             >=0.8
                     , lens              >=4.17
                     , mmorph
                     , mtl
                     , random
                     , serialise         >=0.2
                     , sqlite-simple
                     , stm               >=2.5
                     , text
                     , time
                     , transformers      >=0.5
                     , vector
                     -- Web stuff
                     , servant         >=0.16
                     , servant-server  >=0.16
  Exposed-modules:
                HSChain.Examples.Coin
                HSChain.Examples.Coin.API
                HSChain.Examples.Simple
                HSChain.PoW.API
                HSChain.PoW.Asserts
                HSChain.PoW.BlockIndex
                HSChain.PoW.Consensus
                HSChain.PoW.Exceptions
                HSChain.PoW.Mempool
                HSChain.PoW.Node
                HSChain.PoW.P2P
                HSChain.PoW.P2P.Handler.BlockRequests
                HSChain.PoW.P2P.Handler.CatchupLock
                HSChain.PoW.P2P.Handler.Consensus
                HSChain.PoW.P2P.Handler.PEX
                HSChain.PoW.P2P.Handler.Peer
                HSChain.PoW.P2P.STM.NonceSet
                HSChain.PoW.P2P.STM.PeerRegistry
                HSChain.PoW.P2P.Types
                HSChain.PoW.Store
                HSChain.PoW.Tests
                HSChain.PoW.Types
  default-extensions:
    MonoLocalBinds
    -- Deriving
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    GeneralizedNewtypeDeriving
    StandaloneDeriving
    -- Sugar
    BangPatterns
    LambdaCase
    MultiWayIf
    RecordWildCards
    OverloadedStrings
    TypeOperators
    -- Types
    ScopedTypeVariables
    TypeApplications
    -- Instances
    FlexibleContexts
    FlexibleInstances

Executable hschain-PoW-coin
  Ghc-options:         -Wall -threaded -rtsopts "-with-rtsopts=-N -T -qn1 -A64M"
  Default-Language:    Haskell2010
  Build-Depends:       base                 >=4.9 && <5
                     , hschain-PoW
                     , hschain-net
                     , hschain-merkle
                     , hschain-db
                     , hschain-logger
                     , hschain-crypto
                     , hschain-control
                     , hschain-config
                     --
                     , aeson
                     , mtl
                     , text
                     , bytestring
                     , containers
                     , vector
                     , random
                     , transformers
                     , optparse-applicative
                     , yaml
                     --
                     , servant-server
                     , warp
  hs-source-dirs:      exe
  Main-is:             coin-node.hs
  default-extensions:
    MonoLocalBinds
    -- Deriving
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    GeneralizedNewtypeDeriving
    StandaloneDeriving
    -- Sugar
    BangPatterns
    LambdaCase
    MultiWayIf
    RecordWildCards
    OverloadedStrings
    TypeOperators
    -- Types
    ScopedTypeVariables
    TypeApplications
    -- Instances
    FlexibleContexts
    FlexibleInstances

Executable hschain-PoW-light
  Ghc-options:         -Wall -threaded -rtsopts "-with-rtsopts=-N -T -qn1 -A64M"
  Default-Language:    Haskell2010
  Build-Depends:       base                 >=4.9 && <5
                     , hschain-PoW
                     , hschain-net
                     , hschain-merkle
                     , hschain-db
                     , hschain-logger
                     , hschain-crypto
                     , hschain-control
                     , hschain-config
                     --
                     , aeson
                     , mtl
                     , lens
                     , containers
                     , vector
                     , transformers
                     , optparse-applicative
                     , yaml
  hs-source-dirs:      exe
  Main-is:             coin-light.hs
  default-extensions:
    MonoLocalBinds
    -- Deriving
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    GeneralizedNewtypeDeriving
    StandaloneDeriving
    -- Sugar
    BangPatterns
    LambdaCase
    MultiWayIf
    RecordWildCards
    OverloadedStrings
    TypeOperators
    -- Types
    ScopedTypeVariables
    TypeApplications
    -- Instances
    FlexibleContexts
    FlexibleInstances

Executable hschain-PoW-key
  Ghc-options:         -Wall -threaded -rtsopts "-with-rtsopts=-N -T -qn1 -A64M"
  Default-Language:    Haskell2010
  Build-Depends:       base                 >=4.9 && <5
                     , hschain-PoW
                     , hschain-crypto
                     , aeson
                     , text
                     , bytestring
                     , containers
                     , yaml
                     , optparse-applicative
  hs-source-dirs:      exe
  Main-is:             coin-key.hs

-- Test suite
Test-suite hschain-PoW-tests
  Type:                exitcode-stdio-1.0
  Ghc-options:         -Wall -threaded -rtsopts "-with-rtsopts=-N -qn1"
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , hschain-PoW
                     , hschain-crypto
                     , hschain-control
                     , hschain-merkle
                     , hschain-logger
                     , hschain-db
                     , hschain-net
                     --
                     , exceptions
                     , bytestring
                     , containers
                     , serialise
                     , transformers
                     , random
                     , lens
                     , mtl
                     , stm
                     , tasty             >=0.11
                     , tasty-hunit       >=0.10
  hs-source-dirs:      test
  Main-is:             Main.hs
  Other-modules:       TM.Consensus
                       TM.Mempool
                       TM.P2P
                       TM.Coin
                       TM.Store
                       TM.Types
                       TM.Util.Mockchain
  default-extensions:
    -- Deriving
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    GeneralizedNewtypeDeriving
    StandaloneDeriving
    -- Sugar
    BangPatterns
    LambdaCase
    MultiWayIf
    RecordWildCards
    OverloadedStrings
    TypeOperators
    -- Types
    ScopedTypeVariables
    TypeApplications
    -- Instances
    FlexibleContexts
    FlexibleInstances
