Name:           hschain-config
Version:        0.1
Synopsis:       Deriving of aeson's instance with good error messages
Description:
  This package provides newtype wrappers which allow to derive
  FromJSON instances for records that provide good error messages and
  easy to use (DerivingVia)

Cabal-Version:  >= 1.10
License:        MIT
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       https://github.com/hexresearch/hschain
Category:       Data
Build-Type:     Simple


Library
  Ghc-options:         -Wall
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , aeson             >=1.4
                     , data-default-class
                     , transformers
                     , text              >=1
                     , unordered-containers
  Exposed-modules:
                  HSChain.Config
                  HSChain.Config.Internal.Impl
                  HSChain.Config.Internal.Classes

Test-suite hschain-config-tests
  Type:                exitcode-stdio-1.0
  Ghc-options:         -Wall
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , hschain-config    -any
                     , aeson
                     , data-default-class
                     , bytestring        >=0.10
                     , transformers
                     --
                     , tasty             >=0.12
                     , tasty-hunit       >=0.10.0.1
  hs-source-dirs:      test
  Main-is:             Main.hs
  Other-modules:       TM.Parser
