Name:           hschain-control
Version:        0.1
Synopsis:       Concurrency utils for HSChain
Description:
  Primitives for working with concurrency in hschain projects

Cabal-Version:  >= 1.10
License:        MIT
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       https://github.com/hexresearch/hschain
Category:       Data
Build-Type:     Simple



Library
  Ghc-options:         -Wall
  if impl(ghc >= 8.10)
    Ghc-options:       -Wunused-packages
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , exceptions
                     , stm
                     , transformers
                     , containers
                     , lens              >=4.17
                     , mtl               >=2
                     , generic-lens
  Exposed-modules:
                  HSChain.Control.Channels
                  HSChain.Control.Class
                  HSChain.Control.Mutex
                  HSChain.Control.Shepherd
                  HSChain.Control.Util
                  HSChain.Control.Delay
                  HSChain.Control.Via
