Name:           hschain-crypto-bls
Version:        0.1
Synopsis:       Wrappers for BLS signature scheme
Description:
  BLS

Cabal-Version:  >= 1.10
License:        MIT
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       https://github.com/hexresearch/hschain
Category:       Data
Build-Type:     Simple


Library
  Ghc-options:         -Wall
  if impl(ghc >= 8.10)
    Ghc-options:       -Wunused-packages
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , hschain-crypto
                     , bls-signatures
                     --
                     , bytestring        >=0.10
                     , deepseq           >=1.4
                     , entropy           >=0.4
  Exposed-modules:
                  HSChain.Crypto.BLS

Test-suite hschain-crypto-bls-tests
  Type:                exitcode-stdio-1.0
  Ghc-options:         -Wall -threaded -rtsopts "-with-rtsopts=-N"
  if impl(ghc >= 8.10)
    Ghc-options:       -Wunused-packages
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , hschain-crypto
                     , hschain-crypto-bls
                     , bls-signatures
                     , aeson
                     , bytestring        >=0.10
                     , serialise         >=0.2
                     , text
                     --
                     , tasty             >=0.12
                     -- Contains fix for GHCJS
                     , tasty-hunit       >=0.10.0.1
  hs-source-dirs:      tests
  Main-is:             Main.hs
  Other-modules:       TM.BLS
  if impl(ghcjs)
      Build-Depends: ghcjs-base -any


Benchmark hschain-crypto-bls-bench
  Type:                exitcode-stdio-1.0
  Ghc-options:         -threaded -O2 -Wall
  if impl(ghc >= 8.10)
    Ghc-options:       -Wunused-packages
  hs-source-dirs:      bench
  Default-Language:    Haskell2010
  Main-is:             main.hs
  Build-Depends:       base  >=4.9 && <5
                     , bytestring >=0.10
                     -- NB:
                     -- 'criterion' is not compatable with GHCjs,
                     -- 'hyperion' is pure Haskell, but outdated
                     , criterion
                     , deepseq
                     , random
                     , vector
                     --
                     , bls-signatures
                     , hschain-crypto
                     , hschain-crypto-bls
  Other-modules: Ben.BLS
