Name:           hschain-crypto
Version:        0.1
Synopsis:       Simple cryptography API for HSChain
Description:
  Simple cryptography API for HSChain

Cabal-Version:  >= 1.10
License:        AllRightsReserved
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       https://github.com/hexresearch/thundermint
Category:       Data
Build-Type:     Simple


flag libsodium
  Description: Use libsodium for cryptography
  Default:     True
  Manual:      True

flag android-impl
  Description: Build for android
  Default:     False
  Manual:      True

flag libbls
  Description: Use BLS library (experimental)
  Default:     True
  Manual:      False

Library
  Ghc-options:         -Wall
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , aeson
                     , base58-bytestring >=0.1
                     , bytestring        >=0.10
                     , deepseq           >=1.4
                     , serialise         >=0.2
                     , text              >=1
                     , SHA               >=1.6 && <2
                     , Lazy-Pbkdf2       >=3.1
  if impl(ghcjs)
    hs-source-dirs: ghcjs .
    Build-depends:     ghcjs-prim
                     , ghcjs-base
                     , SHA               >=1.6 && <2
    Other-modules:
                  HSChain.Crypto.NaCl
  else
    if flag(libsodium)
      hs-source-dirs:  sodium .
      extra-libraries: sodium
      Build-Depends: SHA               >=1.6 && <2
                   , memory            >=0.14.14
      Other-modules: HSChain.Crypto.Sodium
    else
      if impl(ghc)
        hs-source-dirs: ghc .
        Build-Depends:     cryptonite        >=0.25
                         , entropy           >=0.4
                         , memory            >=0.14.14
    if flag(libbls) && !impl(ghcjs)
      hs-source-dirs:  bls .
      exposed-modules: HSChain.Crypto.BLS
      build-depends:     bls-signatures
                       , entropy
  Exposed-modules:
                  HSChain.Crypto
                  HSChain.Crypto.Classes
                  HSChain.Crypto.Curve25519
                  HSChain.Crypto.Ed25519
                  HSChain.Crypto.SHA
                  HSChain.Crypto.Salsa20Poly1305
                  HSChain.Crypto.KDFNaCl
                  HSChain.Crypto.PBKDF2Simple

Test-suite thundermint-crypto-tests
  if impl(ghcjs)
    js-sources: js/nacl-fast.js
  if flag(libbls) && !impl(ghcjs)
    cpp-options: -DUSE_BLS
  --
  Type:                exitcode-stdio-1.0
  Ghc-options:         -Wall -threaded -rtsopts "-with-rtsopts=-N"
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , hschain-crypto
                     , aeson
                     , bytestring        >=0.10
                     , base16-bytestring
                     , base64-bytestring
                     , serialise         >=0.2
                     , text
                     --
                     , tasty             >=0.12
                     -- Contains fix for GHCJS
                     , tasty-hunit       >=0.10.0.1
  if flag(libbls) && !impl(ghcjs)
    build-depends:     bls-signatures
  hs-source-dirs:      test
  Main-is:             Main.hs
  Other-modules:       TM.Crypto
                       TM.BLS


Benchmark hschain-crypto-bench
  if impl(ghcjs)
    Buildable: false
  --
  Type:                exitcode-stdio-1.0
  Ghc-options:         -threaded -O2 -Wall
  hs-source-dirs:      bench
  Default-Language:    Haskell2010
  Main-is:             main.hs
  Build-Depends:       base  >=4.9 && <5
                     , bytestring >=0.10
                     , criterion
                     , deepseq
                     , random
                     , vector
                     --
                     , hschain-crypto
  Other-modules: Ben.Ed25519
  if flag(libbls)
    Other-modules: Crypto
    cpp-options:   -DUSE_BLS
