Name:           hschain-examples
Version:        0.1
Synopsis:       Haskell reimplementation of tendermint protocol
Description:
  Haskell reimplementation of tendermint protocol

Cabal-Version:  >= 1.10
License:        AllRightsReserved
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       https://github.com/hexresearch/thundermint
Category:       Data
Build-Type:     Simple

Library
  Ghc-options:         -Wall
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , hschain-crypto
                     , hschain-types
                     , hschain
                       --
                     , aeson
                     , bytestring           >=0.10
                     , containers           >=0.5.9
                     , deepseq              >=1.4
                     , lens
                     , mmorph
                     , exceptions           >=0.8.3
                     , random
                     , serialise            >=0.2
                     , stm                  >=2.5
                     , transformers         >=0.5
                     , unordered-containers >=0.2.5.0
                     , vector
                     , directory
                     , filepath
                     , katip                == 0.7.0.0
  Exposed-modules:
                  HSChain.Mock
                  HSChain.Mock.Coin
                  HSChain.Mock.Dioxane
                  HSChain.Mock.KeyList
                  HSChain.Mock.KeyVal
                  HSChain.Mock.Types

Executable hschain-coin-node
  Ghc-options:         -Wall -threaded -Wno-orphans -rtsopts "-with-rtsopts=-N -T -c -qn1"
  Default-Language:    Haskell2010
  Build-Depends:       base                 >=4.9 && <5
                     , hschain
                     , hschain-types
                     , hschain-crypto
                     , hschain-examples
                     , aeson
                     , bytestring           >=0.10
                     , data-default-class
                     , exceptions
                     , filepath
                     , katip                ==0.7.0.0
                     , network              >=2.6.0.0
                     , network-simple       >=0.4.2
                     , optparse-applicative >=0.14
                     , prometheus-client
                     , prometheus-metrics-ghc
                     , transformers
                     , wai-middleware-prometheus
                     , warp
                     , yaml
                     , text
                     , filepath
                     , directory
  hs-source-dirs:      exe
  Main-is:             coin-node.hs

Executable hschain-db
  Buildable: False
  Ghc-options:         -Wall -threaded -Wno-orphans
  Default-Language:    Haskell2010
  Build-Depends:       base                 >=4.9 && <5
                     , hschain
                     , hschain-types
                     , hschain-crypto
                     , hschain-examples
                     , aeson
                     , cborg                >=0.2
                     , bytestring           >=0.10
                     , containers           >=0.5.7
                     , directory
                     , filepath
                     , optparse-applicative >=0.14
                     , serialise
                     , stm
                     , text
  hs-source-dirs:      exe
  Main-is:             db-dump.hs


-- Test suite
Test-suite hschain-tests
  Type:                exitcode-stdio-1.0
  Ghc-options:         -Wall -threaded -rtsopts "-with-rtsopts=-N -qn1"
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , hschain
                     , hschain-crypto
                     , hschain-types
                     , hschain-quickcheck
                     , hschain-examples
                     , aeson
                     , async             >=2.2.1
                     , bytestring        >=0.10
                     , containers
                     , deepseq           >=1.4
                     , exceptions
                     , free
                     , microlens
                     , network
                     , random
                     , sqlite-simple
                     , katip
                     , serialise         >=0.2
                     , stm               >=2.4
                     , transformers
                     , retry             >=0.7.6.2
                     , text
                     --
                     , QuickCheck
                     , bytestring-arbitrary
                     , generic-arbitrary
                     , hedgehog
                     , hedgehog-quickcheck
                     , tasty             >=0.11
                     , tasty-hedgehog
                     , tasty-quickcheck
                     , tasty-hunit       >=0.10
  hs-source-dirs:      test
  Main-is:             Main.hs
  Other-modules:       TM.Consensus
                       TM.Integration
                       TM.Mempool
                       TM.Network
                       TM.P2P.Gossip
                       TM.P2P.PEX
                       TM.RealNetwork
                       TM.Serialisation
                       TM.Util.Network
                       TM.Util.Tests
                       TM.Util.MockChain
                       TM.Validators

-- Benchmarks
Benchmark hschain-bench
  Type:                exitcode-stdio-1.0
  Ghc-options:         -threaded -O2 -Wall
  hs-source-dirs:      bench
  Default-Language:    Haskell2010
  Main-is:             main.hs
  Build-Depends:       base  >=4.9 && <5
                     , bytestring >=0.10
                     , criterion
                     , deepseq
                     , random
                     , vector
                     , cryptonite
                     --
                     , hschain
                     , hschain-examples
                     , hschain-crypto
                     , hschain-types
  Other-modules:       ValidatorSetsBench
                       MockCoin
