Name:           hschain-examples
Version:        0.1
Synopsis:       Examples and tests for hschain
Description:
  Implementation of very simple and not quite realistic coin on blockchain

Cabal-Version:  >= 1.10
License:        MIT
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       https://github.com/hexresearch/thundermint
Category:       Data
Build-Type:     Simple

Library
  Ghc-options:         -Wall
  if impl(ghc >= 8.10)
    Ghc-options:       -Wunused-packages
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.12 && <5
                     , hschain
                     , hschain-config
                     , hschain-control
                     , hschain-crypto
                     , hschain-db
                     , hschain-examples-types
                     , hschain-logger
                     , hschain-mempool
                     , hschain-merkle
                     , hschain-net
                     , hschain-types
                       --
                     , aeson
                     , bytestring           >=0.10
                     , containers           >=0.5.9
                     , data-default-class
                     , deepseq              >=1.4
                     , mwc-random
                     , lens
                     , mmorph
                     , mtl
                     , exceptions           >=0.8.3
                     , parallel
                     , random
                     , sqlite-simple
                     , serialise            >=0.2
                     , transformers         >=0.5
                     , unordered-containers >=0.2.5.0
                     , vector
                     , directory
                     , filepath
                     , katip                >=0.8
  Exposed-modules:
                  HSChain.Mock
                  HSChain.Mock.Coin
                  HSChain.Mock.Dioxane
                  HSChain.Mock.KeyList
                  HSChain.Mock.KeyVal
                  HSChain.Mock.Types

Executable hschain-coin-node
  Ghc-options:         -Wall -threaded -Wno-orphans -rtsopts "-with-rtsopts=-N -T -qn1 -A64M"
  if impl(ghc >= 8.10)
    Ghc-options:       -Wunused-packages
  Default-Language:    Haskell2010
  Build-Depends:       base                 >=4.12 && <5
                     , hschain
                     , hschain-net
                     , hschain-logger
                     , hschain-types
                     , hschain-control
                     , hschain-examples
                     , optparse-applicative >=0.14
                     , prometheus-client
                     , prometheus-metrics-ghc
                     , transformers
                     , wai-middleware-prometheus
                     , warp
                     , yaml
  hs-source-dirs:      exe
  Main-is:             coin-node.hs

Executable hschain-dioxane-node
  Ghc-options:         -Wall -threaded -Wno-orphans -rtsopts "-with-rtsopts=-N -T -qn1"
  if impl(ghc >= 8.10)
    Ghc-options:       -Wunused-packages
  Default-Language:    Haskell2010
  Build-Depends:       base                 >=4.12 && <5
                     , hschain
                     , hschain-net
                     , hschain-logger
                     , hschain-types
                     , hschain-control
                     , hschain-config
                     , hschain-crypto
                     , hschain-examples
                     , aeson
                     , data-default-class
                     , exceptions
                     , katip                >=0.8
                     , mtl
                     , optparse-applicative >=0.14
                     , prometheus-client
                     , prometheus-metrics-ghc
                     , transformers
                     , wai-middleware-prometheus
                     , warp
                     , vector
                     , yaml
  hs-source-dirs:      exe
  Main-is:             dioxane-node.hs


-- Test suite
Test-suite hschain-tests
  Type:                exitcode-stdio-1.0
  Ghc-options:         -Wall -threaded -rtsopts "-with-rtsopts=-A64M -N -qn1"
  if impl(ghc >= 8.10)
    Ghc-options:       -Wunused-packages
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.12 && <5
                     , hschain
                     , hschain-logger
                     , hschain-merkle
                     , hschain-mempool
                     , hschain-crypto
                     , hschain-control
                     , hschain-types
                     , hschain-net
                     , hschain-quickcheck
                     , hschain-examples
                     , aeson
                     , containers
                     , data-default-class
                     , deepseq           >=1.4
                     , exceptions
                     , free
                     , katip
                     , serialise         >=0.2
                     , stm               >=2.4
                     , transformers
                     , mtl
                     , retry             >=0.7.6.2
                     , text
                     , unordered-containers
                     , hashable
                     , vector
                     --
                     , QuickCheck
                     , hedgehog
                     , hedgehog-quickcheck
                     , tasty             >=0.11
                     , tasty-hedgehog
                     , tasty-quickcheck
                     , tasty-hunit       >=0.10
  hs-source-dirs:      test
  Main-is:             Main.hs
  Other-modules:       TM.Consensus
                       TM.Coin
                       TM.Integration
                       TM.Mempool
                       TM.P2P.Gossip
                       TM.P2P.PEX
                       TM.Serialisation
                       TM.Util.Network
                       TM.Util.Tests
                       TM.Util.MockChain
                       TM.Validators

-- Benchmarks
Benchmark hschain-bench
  Type:                exitcode-stdio-1.0
  Ghc-options:         -threaded -O2 -Wall  -rtsopts "-with-rtsopts=-N -A64M -T -qn1"
  if impl(ghc >= 8.10)
    Ghc-options:       -Wunused-packages
  hs-source-dirs:      bench
  Default-Language:    Haskell2010
  Main-is:             main.hs
  Build-Depends:       base  >=4.12 && <5
                     , bytestring >=0.10
                     , criterion
                     , deepseq
                     , random
                     , serialise
                     , vector
                     , cryptonite
                     --
                     , hschain
                     , hschain-examples
                     , hschain-merkle
                     , hschain-crypto
                     , hschain-types
  Other-modules:       ValidatorSetsBench
                       MockCoin
                       Dioxane
