Name:           hschain-merkle
Version:        0.1
Synopsis:       Merkle trees support for HSChain
Description:
  Package contains definitions for different variants of Merkle trees:
  binary, heteropgenous, etc.

Cabal-Version:  >= 1.10
License:        MIT
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       https://github.com/hexresearch/hschain
Category:       Data
Build-Type:     Simple


Library
  Ghc-options:         -Wall
  if impl(ghc >= 8.10)
    Ghc-options:       -Wunused-packages
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , hschain-crypto
                     --
                     , aeson
                     , bytestring        >=0.10
                     , deepseq           >=1.4
                     , serialise         >=0.2
  Exposed-modules:
                  HSChain.Types.Merkle.Block
                  HSChain.Types.Merkle.Tree
                  HSChain.Types.Merkle.Types
  default-extensions:
    -- Deriving
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    GeneralizedNewtypeDeriving
    StandaloneDeriving
    -- Sugar
    BangPatterns
    LambdaCase
    MultiWayIf
    RecordWildCards
    OverloadedStrings
    TypeOperators
    -- Types
    ScopedTypeVariables
    TypeApplications
    -- Instances
    FlexibleContexts
    FlexibleInstances

-- Test suite
Test-suite hschain-merkle-tests
  if impl(ghcjs)
    js-sources: ../hschain-crypto/js/nacl-fast.js
  --
  Type:                exitcode-stdio-1.0
  Ghc-options:         -Wall -threaded -rtsopts "-with-rtsopts=-N -qn1"
  if impl(ghc >= 8.10)
    Ghc-options:       -Wunused-packages
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , hschain-crypto
                     , hschain-merkle
                     --
                     , bytestring
                     , tasty             >=0.11
                     , tasty-hunit       >=0.10
                     , tasty-quickcheck
  hs-source-dirs:      test
  Main-is:             Main.hs
  Other-modules:       TM.Merkle
                       TM.MerkleBlock
  default-extensions:
    -- Deriving
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    GeneralizedNewtypeDeriving
    StandaloneDeriving
    -- Sugar
    BangPatterns
    LambdaCase
    MultiWayIf
    RecordWildCards
    OverloadedStrings
    TypeOperators
    -- Types
    ScopedTypeVariables
    TypeApplications
    -- Instances
    FlexibleContexts
    FlexibleInstances
