Name:           hschain-net
Version:        0.1
Synopsis:       Abstract network API for hschain
Description:
  Abstract network API for hschain

Cabal-Version:  >= 1.10
License:        AllRightsReserved
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       https://github.com/hexresearch/thundermint
Category:       Data
Build-Type:     Simple

Library
  Ghc-options:         -Wall
  Default-Language:    Haskell2010
  Build-Depends:       base               >=4.9 && <5
                     , hschain-types
                     --
                     , aeson
                     , bytestring         >=0.10
                     , containers         >=0.5.9
                     , data-default-class
                     , exceptions         >=0.8.3
                     , network            >=2.6.0.0 && <2.9
                     , network-info
                     , http-client-tls
                     , network            >=2.6.0.0 && <2.9
                     , serialise          >=0.2
                     , stm                >=2.5
                     , tls                >=1.4.1
                     , text               >=1
                     , x509
                     , x509-store
                     , x509-system
                     , x509-validation
  if arch(i386) || arch(x86_64)
    CPP-Options:   -DWORDS_LITTLEENDIAN
  Exposed-modules:
                  HSChain.P2P.Types
                  HSChain.P2P.Network
                  HSChain.P2P.Network.IpAddresses
                  HSChain.Types.Network
  Other-modules:
                  HSChain.P2P.Network.Parameters
                  HSChain.P2P.Network.Internal.TLS
                  HSChain.P2P.Network.Internal.TCP
                  HSChain.P2P.Network.Internal.UDP
                  HSChain.P2P.Network.Internal.Mock
                  HSChain.P2P.Network.Internal.Utils


-- Test suite
Test-suite hschain-net-tests
  Type:                exitcode-stdio-1.0
  Ghc-options:         -Wall -threaded -rtsopts "-with-rtsopts=-N -qn1"
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , hschain-net
--                      , aeson
                     , async             >=2.2.1
                     , bytestring        >=0.10
--                      , containers
--                      , deepseq           >=1.4
                     , exceptions
--                      , free
--                      , microlens
                     , network
                     , random
--                      , sqlite-simple
--                      , katip
--                      , serialise         >=0.2
--                      , stm               >=2.4
--                      , transformers
                     , retry             >=0.7.6.2
--                      , text
--                      , unordered-containers
--                      , hashable
--                      , vector
--                      --
                     , QuickCheck
--                      , bytestring-arbitrary
--                      , generic-arbitrary
--                      , hedgehog
--                      , hedgehog-quickcheck
                     , tasty             >=0.11
                     , tasty-quickcheck
                     , tasty-hunit       >=0.10
  hs-source-dirs:      test
  Main-is:             Main.hs
  Other-modules:       TM.Network
                       TM.RealNetwork
--                        TM.Integration
--                        TM.Mempool
--                        TM.Network
--                        TM.P2P.Gossip
--                        TM.P2P.PEX
--                        TM.RealNetwork
--                        TM.Serialisation
--                        TM.Util.Network
--                        TM.Util.Tests
--                        TM.Util.MockChain
--                        TM.Validators
